--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,7 @@ name: Wyatt Readme
 
 on:
   schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: "*/10 * * * *"
 
 jobs:
   update-readme:
