--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Wyatt Readme
 on:
   schedule:
     - cron: "*/10 * * * *"
-
+    
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: athul/waka-readme@master
         with:
-          SHOW_TITLE: true
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          REPOSITORY: wyatt/wyatt
