--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: Wyatt Readme
 on:
   schedule:
     - cron: "*/10 * * * *"
+  push: {branches: ["master", "main"]}
     
 jobs:
   update-readme:
